--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,21 @@ body {
   color: #2e2f42;
 }
 
+.header-link {
+  text-decoration: none;
+}
+
+.header-address-link {
+  text-decoration: none;
+}
+
 ul {
   list-style: none;
 }
 
 /* Логотип */
 
-.logo {
+.header-logo {
     text-decoration: none;
 }
 
@@ -45,5 +53,38 @@ ul {
   color: #2e2f42;
 }
 
-/* Site-nav */
+/* header-nav */
 
+.header-link {
+font-weight: 500;
+font-size: 16px;
+line-height: calc(24 / 16);
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+.header-address-link {
+font-size: 16px;
+line-height: calc(24 / 16);
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.hero-title {
+font-weight: 700;
+font-size: 56px;
+line-height: calc(60 / 56);
+text-align: center;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+}
+
+.hero-btn {
+font-weight: 500;
+font-size: 16px;
+line-height: calc(24 / 16);
+display: flex;
+align-items: center;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+}
