--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ letter-spacing: 0.02em;
 color: #2E2F42;
 }
 
+.header-link:is(:hover, :focus) {
+  color: #4d5ae5;
+}
+
 .header-address-link {
 font-size: 16px;
 line-height: calc(24 / 16);
