--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ body {
   color: #2e2f42;
 }
 
+/* Header */
+
 .header-link {
   text-decoration: none;
 }
@@ -63,7 +65,8 @@ letter-spacing: 0.02em;
 color: #2E2F42;
 }
 
-.header-link:is(:hover, :focus) {
+.header-link:hover,
+.header-link:focus {
   color: #4d5ae5;
 }
 
@@ -74,8 +77,18 @@ letter-spacing: 0.02em;
 color: #434455;
 }
 
+.header-address-link:hover,
+.header-address-link:focus {
+  color: #404BBF;
+}
+
+/* Hero */
+
+.hero {
+background-color: #2E2F42;
+}
+
 .hero-title {
-font-weight: 700;
 font-size: 56px;
 line-height: calc(60 / 56);
 text-align: center;
@@ -91,4 +104,162 @@ display: flex;
 align-items: center;
 letter-spacing: 0.04em;
 color: #FFFFFF;
+background: #4D5AE5;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+cursor: pointer;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+color: #FFFFFF;
+background: #404BBF;
+}
+
+/* About */
+
+.about-subtitle {
+font-weight: 500;
+font-size: 20px;
+line-height: calc(24 / 20);
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+.about-text {
+font-size: 16px;
+line-height: calc(24 / 16);
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+/* Example */
+
+.example-title {
+font-size: 36px;
+line-height: calc(40 / 36);
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2E2F42;
+}
+
+
+/* Team */
+
+
+.team-title {
+font-size: 36px;
+line-height: calc(40 / 36);
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2E2F42;
+}
+
+.team-subtitle {
+font-weight: 500;
+font-size: 20px;
+line-height: calc(24 / 20);
+text-align: center;
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+.team-text {
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  text-align: center;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+/* Footer */
+
+.footer-logo {
+  text-decoration: none;
+}
+
+/* Portfolio */
+/* Filter */
+
+.filter-btn {
+font-weight: 500;
+font-size: 16px;
+line-height: calc(24 / 16);
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.04em;
+color: #4D5AE5;
+background: #F4F4FD;
+border: 1px solid #E7E9FC;
+border-radius: 4px;
+cursor: pointer;
+}
+
+.filter-btn:hover,
+.filter-btn:focus {
+font-weight: 500;
+font-size: 16px;
+line-height: calc(24 / 16);
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+background: #404BBF;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+}
+
+/* Row1 */
+
+.row1-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(24 / 20);
+  letter-spacing: 0.02em;
+  color: #2E2F42; 
+}
+
+.row1-text {
+  font-size: 16px;
+  line-height: calc(24 / 16); 
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* Row2 */
+
+.row2-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(24 / 20);
+  letter-spacing: 0.02em;
+  color: #2E2F42; 
+}
+
+.row2-text {
+  font-size: 16px;
+  line-height: calc(24 / 16); 
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* Row3 */
+
+.row3-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(24 / 20);
+  letter-spacing: 0.02em;
+  color: #2E2F42; 
+}
+
+.row3-text {
+  font-size: 16px;
+  line-height: calc(24 / 16); 
+  letter-spacing: 0.02em;
+  color: #434455;
 }
