--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,13 @@ ul {
   letter-spacing: 0.03em;
   color: #4d5ae5;
 }
+.footer-logo-studio {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  color: #f4f4fd;
+}
 
 /* Portfolio */
 /* Filter */
